# SchoolOS

./: README.md  docker-compose.yml
.github/workflows/: build-admins.yml  build-dashboard.yml  build-students.yml  docker-build.yml
admins/: README.md  closewindow.html  config.toml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
admins-legacy/: package-lock.json  package.json
admins-legacy/src/: App.vue  main.js
admins-legacy/src-tauri/: Cargo.toml  tauri.conf.json
admins-legacy/src-tauri/src/: httpserver.rs
admins-legacy/src-tauri/src/account/: mod.rs
admins-legacy/src-tauri/src/config/: mod.rs
admins-legacy/src/components/: AsideMenuLayer.vue
admins/src/: App.vue  menuAside.js  menuNavBar.js
admins/src-tauri/: Cargo.toml  tauri.conf.json
admins/src-tauri/src/: event_emitter.rs  httpserver.rs  main.rs
admins/src-tauri/src/account/: mod.rs
admins/src-tauri/src/config/: mod.rs
admins/src-tauri/src/preferences/: mod.rs
admins/src-tauri/src/storage/: mod.rs
admins/src/router/: index.js
admins/src/stores/: style.js
admins/src/views/: LoginView.vue  LogoutView.vue  NotFoundView.vue
core/: Cargo.toml  Dockerfile
core/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
core/src/: main.rs  schema.rs
core/src/models/: mod.rs
core/src/services/: group.rs  mod.rs  student.rs
schoolos-students/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
schoolos-students/src/: App.vue  main.ts
schoolos-students/src-tauri/: Cargo.toml  tauri.conf.json
schoolos-students/src-tauri/capabilities/: default.json
schoolos-students/src-tauri/src/: lib.rs  main.rs
schoolos-students/src/assets/: index.css
schoolos-students/src/components/: DarkMode.vue  NavMenu.vue
schoolos-students/src/components/organizer/: NavMenu.vue
schoolos-students/src/components/organizer/tasklist/: Task.vue
schoolos-students/src/layouts/: OrganizerLayout.vue
schoolos-students/src/lib/: datatable.ts
schoolos-students/src/router/: LoadingComponent.vue  index.ts  loader.ts
schoolos-students/src/views/: Home.vue
schoolos-students/src/views/organizer/: Agenda.vue  TaskList.vue
students/: Dockerfile  README.md  index.html  nuxt.config.ts  package-lock.json  package.json  vite.config.ts
students-legacy/: README.md  nuxt.config.ts  package-lock.json
students-legacy/components/: OverlayedUI.vue
students-legacy/components/Map/: View.vue
students-legacy/components/Nav/: Search.vue
students-legacy/layouts/: default.vue
students-legacy/pages/: info.vue  myschedule.vue
students-legacy/server/api/auth/: [...].ts
students/components/: Icon.vue  Loading.vue
students/components/Map/: Handler.vue
students/components/Nav/: Bar.vue  Lateral.vue  Search.vue
students/layouts/: default.vue
students/pages/: index.vue  info.vue
students/server/api/mapinfo/: defaultlocation.get.ts
students/src/: App.vue  main.ts  styles.css
students/src-tauri/: Cargo.toml  tauri.conf.json
students/src-tauri/capabilities/: pinia.json
students/src-tauri/src/: lib.rs
students/src/assets/: index.css
students/src/components/: ApplicationSettings.vue  LangSelect.vue  NavMenu.vue
students/src/components/organizer/tasklist/: Task.vue
students/src/lib/: compatibility.ts  utils.ts
students/src/router/: index.ts
students/src/stores/: organizer.ts  settings.ts
students/src/views/: Home.vue
students/src/views/organizer/: Pomodoro.vue  Schedule.vue
