[package]
name = "schoolos-dashboard"
version = "0.1.0"
description = "The Admin Dashboard for SchoolOS"
authors = ["GaryCraft"]
license = "MIT"
repository = ""
default-run = "schoolos-dashboard"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["window-close", "window-create", "window-request-user-attention", "window-set-focus"] }

[dependencies.reqwest]
version = "0.11.13"
features = ["json"]

[dependencies.rocket]
version = "0.5.0-rc.3"
default-features = false
features = ["tls"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
